  Jetty, tomcat pool and junit upgraded
  AbstractTableSortModel.sort() refactored, performance improved quite a bit, no longer calls getSortingStatesOrderedByPriority() on each compare
  EntityModel, add/removeLinkedDetailModelsListener() replaced with add/removeLinkedDetailModelAddedListener() and add/removeLinkedDetailModelRemovedListener()
  EntityGeneratorModel bug fixed, was still using static verion of Entities.define() method
  EntityEditView bug fixed, insert() and update() validation failures did not trigger focus request for the given control
  DefaultProperty.hasDefaultValue() bug fixed, did not work with remote connection since the defaultValueProvider was a deserialized instance so defaultValueProvider == DEFAULT_VALUE_PROVIDER did not work, replaced with instanceof operator
  DefaultEntity.writeObject(), readObject() bug fixed, serialization did not respect missing values, that is, it populated all missing values with null when deserializing
0.11.6
  H2Database, unit test for multiple in-memory databases improved, no longer loads sql files as resources (did not work with gradle + java 11)
  JMinorServerKeystore and JMinorClientTruststore renamed to jminor_keystore.jks and jminor_truststore.jks respectively, type changed to pkcs12
  javax.net.ssl.trustStorePassword specified everywhere javax.net.ssl.trustStore is used
  jminor-framework-model no longer depends on jminor-framework-db-local and jminor-framework-db-remote, projects must now explicitly add a runtime dependency for these
  EntityConnectionProvider.setUser() now returns the EntityConnectionProvider instance
  AbstractEntityConnectionProvider constructor no longer takes User parameter, setUser() must be called before connection is requested
  EntityConnectionProvider and subclasses refactored for parameterless instantiation
  RemoteEntityConnectionProvider no longer crashes on parameterless instantiation due to missing configuration parameter