@@ -6,6 +6,7 @@ package org.jminor.framework.plugins.tomcat.pool;
 import org.jminor.common.User;
 import org.jminor.common.Util;
 import org.jminor.common.db.Database;
+import org.jminor.common.db.DatabaseConnection;
 import org.jminor.common.db.Databases;
 import org.jminor.common.db.exception.DatabaseException;
 import org.jminor.common.db.pool.AbstractConnectionPool;
@@ -179,7 +180,7 @@ public final class TomcatConnectionPoolProvider implements ConnectionPoolProvide
 
     @Override
     public boolean validate(final Connection connection, final int i) {
-      return Databases.isValid(connection, database, 0);
+      return Databases.isValid(connection, database, DatabaseConnection.CONNECTION_VALIDITY_CHECK_TIMEOUT.get());
     }
   }
 }
