@@ -4916,3 +4916,4 @@
   AbstractEntityConnectionProvider constructor no longer takes User parameter, setUser() must be called before connection is requested
   EntityConnectionProvider and subclasses refactored for parameterless instantiation
   RemoteEntityConnectionProvider no longer crashes on parameterless instantiation due to missing configuration parameter
+  CONNECTION_VALIDITY_CHECK_TIMEOUT configuration value moved from EntityConnection to DatabaseConnection
